5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1638_87.log
== TEST (2019-04-13 21:28:14) 
-- CODE:
x=int(input("numero1: "))
y=int(input("numero2: "))
z=int(input("numero3: "))

if(x>y>z):
	print(z)
if(x>z>y):
	print(y)
if(z>y>x):
	print(x)
if(y>x>z):
	print(z)
if(z>y>x):
	print(x)
if(z>x>y):
	print(y):
-- ERROR:
File "XXXX", line 16
    print(y):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:33:32) 
-- CODE:
x=int(input("numero1: "))
y=int(input("numero2: "))
z=int(input("numero3: "))

if(x>y>z):
	print(z)
if(x>z>y):
	print(y)
if(z>y>x):
	print(x)
if(y>x>z):
	print(z)
if(z>y>x):
	print(x)
if(z>x>y):
	print(y):
else:
	print(.)
-- ERROR:
File "XXXX", line 16
    print(y):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:33:44) 
-- CODE:
x=int(input("numero1: "))
y=int(input("numero2: "))
z=int(input("numero3: "))

if(x>y>z):
	print(z)
if(x>z>y):
	print(y)
if(z>y>x):
	print(x)
if(y>x>z):
	print(z)
if(z>y>x):
	print(x)
if(z>x>y):
	print(y)
else:
	print(.)
-- ERROR:
File "XXXX", line 18
    print(.)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:34:05) 
-- CODE:
x=int(input("numero1: "))
y=int(input("numero2: "))
z=int(input("numero3: "))

if(x>y>z):
	print(z)
if(x>z>y):
	print(y)
if(z>y>x):
	print(x)
if(y>x>z):
	print(z)
if(z>y>x):
	print(x)
if(z>x>y):
	print(y)

-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 21:34:23) 
-- CODE:
x=int(input("numero1: "))
y=int(input("numero2: "))
z=int(input("numero3: "))

if(x>y>z):
	print(z)
if(x>z>y):
	print(y)
if(z>y>x):
	print(x)
if(y>x>z):
	print(z)
if(z>y>x):
	print(x)
if(z>x>y):
	print(y)

-- EXECUTION TIME:
0.161929
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123
123
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:35:27) 
-- CODE:
x=int(input("numero1: "))
y=int(input("numero2: "))
z=int(input("numero3: "))

if(x>y>z):
	print(z)
if(x>z>y):
	print(y)
if(z>y>x):
	print(x)
if(y>x>z):
	print(z)
if(z>y>x):
	print(x)
if(z>x>y):
	print(y)
else:
	print(me fudi)
-- ERROR:
File "XXXX", line 18
    print(me fudi)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:35:44) 
-- CODE:
x=int(input("numero1: "))
y=int(input("numero2: "))
z=int(input("numero3: "))

if(x>y>z):
	print(z)
if(x>z>y):
	print(y)
if(z>y>x):
	print(x)
if(y>x>z):
	print(z)
if(z>y>x):
	print(x)
if(z>x>y):
	print(y)
else:
	
-- ERROR:
File "XXXX", line 19
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 21:36:05) 
-- CODE:
x=int(input("numero1: "))
y=int(input("numero2: "))
z=int(input("numero3: "))

if(x>y>z):
	print(z)
if(x>z>y):
	print(y)
if(z>y>x):
	print(x)
if(y>x>z):
	print(z)
if(z>y>x):
	print(x)
if(z>x>y):
	print(y)

	
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 21:36:24) 
-- CODE:
x=int(input("numero1: "))
y=int(input("numero2: "))
z=int(input("numero3: "))

if(x>y>z):
	print(z)
if(x>z>y):
	print(y)
if(z>y>x):
	print(x)
if(y>x>z):
	print(z)
if(z>y>x):
	print(x)
if(z>x>y):
	print(y)

	
-- EXECUTION TIME:
0.247106
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123
123
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:52:43) 
-- CODE:
x=int(input("numero1: "))
y=int(input("numero2: "))
z=int(input("numero3: "))

if(x >y > z):
	print(z)
if(x >z > y):
	print(y)
if(z > y> x):
	print(x)
if(y > x > z):
	print(z)
if(z > y> x):
	print(x)
if(z > x> y):
	print(y)

	
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 22:53:03) 
-- CODE:
x=int(input("numero1: "))
y=int(input("numero2: "))
z=int(input("numero3: "))

if(x >y > z):
	print(z)
if(x >z > y):
	print(y)
if(z > y> x):
	print(x)
if(y > x > z):
	print(z)
if(z > y> x):
	print(x)
if(z > x> y):
	print(y)

	
-- EXECUTION TIME:
0.181829
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123
123
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:34:20) 
-- CODE:
x=int(input("numero1: "))
y=int(input("numero2: "))
z=int(input("numero3: "))

if(x > y > z):
	print(z)
if(x > z > y):
	print(y)
if(z > y > x):
	print(x)
if(y > x > z):
	print(z)
if(z > y > x):
	print(x)
if(z > x > y):
	print(y)

	
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:34:44) 
-- CODE:
x=int(input("numero1: "))
y=int(input("numero2: "))
z=int(input("numero3: "))

if(x > y > z):
	print(z)
if(x > z > y):
	print(y)
if(z > y > x):
	print(x)
if(y > x > z):
	print(z)
if(z > y > x):
	print(x)
if(z > x > y):
	print(y)

	
-- EXECUTION TIME:
0.224901
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123
123
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:38:47) 
-- CODE:
n =int(input("numero1: "))
n1 =int(input("numero2: "))
n2 =int(input("numero3: "))

if(n > n1 > n2):
	print(n2)
if(n1 > n > n2):
	print(n2)
if(n2 > n1 > n):
	print(n)
if(n1 > n2 > n):
	print(n)
if(n > n2 > n1):
	print(n1)
if(n2 > n > n1):
	print(n1)

	
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:39:01) 
-- CODE:
n =int(input("numero1: "))
n1 =int(input("numero2: "))
n2 =int(input("numero3: "))

if(n > n1 > n2):
	print(n2)
if(n1 > n > n2):
	print(n2)
if(n2 > n1 > n):
	print(n)
if(n1 > n2 > n):
	print(n)
if(n > n2 > n1):
	print(n1)
if(n2 > n > n1):
	print(n1)

	
-- EXECUTION TIME:
0.199868
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
